# dicom-to-3D-opus

./: .env.example  .gitignore  analyze_models.py  batch_run.py  batch_run_10cases.py  batch_run_4cases.py  test_hu_pipeline.py  test_hybrid.py  triple_obj_pipeline.py
medrecon_engine/: __init__.py  main.py  pyproject.toml
medrecon_engine/analysis/: __init__.py  adaptive_segmenter.py  hu_analyzer.py  medgemma_analyzer.py  medical_findings.py  threshold_generator.py
medrecon_engine/anatomy/: __init__.py  ai_segmenter.py  base_segmenter.py  bone.py  brain.py  hu_segmenter.py  lung.py  registry.py  soft_tissue.py  vascular.py
medrecon_engine/audit/: __init__.py  logger.py
medrecon_engine/config/: __init__.py  hu_ranges.py  precision_config.py  structure_groups.py
medrecon_engine/core/: __init__.py  dataset_scanner.py  dicom_to_nifti.py  dicom_validator.py  hu_converter.py  preprocessing.py  resampler.py  volume_loader.py
medrecon_engine/export/: __init__.py  obj_writer.py  stl_writer.py
medrecon_engine/hu_model/: __init__.py  hu_estimator.py  hu_profiles.py
medrecon_engine/mesh/: __init__.py  mesh_from_labels.py  mesh_organizer.py  mesh_postprocess.py  mesh_validator.py  vtk_generator.py
medrecon_engine/quality/: __init__.py  confidence_score.py  surface_metrics.py
medrecon_engine/tests/: test_medrecon.py
medrecon_engine/visualization/: __init__.py  colors.py  render3d.py  report.py  slice_overlay.py
test_output/L109_gemini_cards/: medical_findings.html
